--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<title>Git</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+	<!-- Başlık -->
+	<h1>Cemal Gönültaş</h1>
+	<!-- Hakkımda bölümü -->
+	<h2>Hakkımızda</h2>
+	<p>Merhaba, ben Cemal Gönültaş. Mersin'de yaşıyorum.</p>
 </body>
 </html>
 
