--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 	<!-- Hakkımda bölümü -->
 	<h2>Hakkımızda</h2>
 	<p>Merhaba, ben Cemal Gönültaş. Mersin'de yaşıyorum.</p>
+	
+	<h2>İlgi Alanlarım</h2>
+	<ol>
+		<li>Kitaplar</li>
+		<ul>
+			<li><a href="https://www.goodreads.com/book/show/157993.The_Little_Prince">Küçük Prens</a></li>
+		</ul>
+		<li>Filmler</li>
+		<ul>
+			<li><a href="https://www.imdb.com/title/tt4974684/?ref_=fn_al_tt_1">Kara Bela</a></li>
+		</ul>
+	</ol>
+	
+	<img src="github.png" title="GitHub proje resmi" alt="GitHub proje resmi"/>
 </body>
 </html>
 
